--- a/Detail_/Book_Detail_Title.xib
+++ b/Detail_/Book_Detail_Title.xib
@@ -34,16 +34,29 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" alpha="0.0" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ifz-Fg-esK">
+                    <rect key="frame" x="275" y="2.5" width="35" height="35"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="35" id="k2P-q5-j2v"/>
+                        <constraint firstAttribute="width" constant="35" id="oEy-xV-Yjn"/>
+                    </constraints>
+                    <state key="normal" image="delete"/>
+                </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="kC0-tX-euG" firstAttribute="leading" secondItem="Ifz-Fg-esK" secondAttribute="trailing" id="1Cp-gD-jZT"/>
                 <constraint firstItem="1MW-Y3-Y4t" firstAttribute="top" secondItem="OvS-kI-PUc" secondAttribute="top" constant="10" id="LDy-Re-h9X"/>
                 <constraint firstItem="1MW-Y3-Y4t" firstAttribute="leading" secondItem="OvS-kI-PUc" secondAttribute="leading" constant="10" id="LqJ-FY-cza"/>
+                <constraint firstItem="Ifz-Fg-esK" firstAttribute="centerY" secondItem="OvS-kI-PUc" secondAttribute="centerY" id="TUd-2h-LRj"/>
                 <constraint firstAttribute="trailing" secondItem="kC0-tX-euG" secondAttribute="trailing" constant="10" id="U4E-nh-bkh"/>
                 <constraint firstItem="kC0-tX-euG" firstAttribute="top" secondItem="OvS-kI-PUc" secondAttribute="top" constant="10" id="UaK-I2-pz3"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="NRE-us-FZn"/>
-            <point key="canvasLocation" x="-109" y="-3"/>
+            <point key="canvasLocation" x="-110.14492753623189" y="-3.3482142857142856"/>
         </collectionReusableView>
     </objects>
+    <resources>
+        <image name="delete" width="42.5" height="42.5"/>
+    </resources>
 </document>
